Add game board, set up game class and methods for buildingGrid, adding snake and moving to the right, with a button for now for

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	</head>
 	<body>
 		<h1>Generated using ProjectGenerator</h1>
+		<button id="right">Right</button>
+
+		<section id="game"></section>
 
 		<script src="./scripts/main.js"></script>
 	</body>
