Snake can move in all directions, added keyboard controls and remove buttons. Refactor to get smooth movement

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" href="./styles/main.css" />
 	</head>
 	<body>
-		<h1>Generated using ProjectGenerator</h1>
-		<button id="right">Right</button>
+		<h1 id="info" style="min-height: 100px"></h1>
 
 		<section id="game"></section>
 
