Add score fetching to the client side

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<h1 id="info" style="min-height: 100px"></h1>
 
+		<section id="scoreBoard"></section>
 		<section id="game"></section>
 
 		<script src="./scripts/main.js"></script>
