--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 			<section id="game" class="main__game"></section>
 		</main>
 
-		<script src="./scripts/main.js"></script>
+		<script src="./scripts/main.js" type="module"></script>
 	</body>
 </html>
