complete refactor of js, breakdown of css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<button id="newGame" class="controls__button">New Game</button>
 		</section>
 
-		<section id="lose" class="loseScreen none">
+		<section id="lose" class="loseScreen hide">
 			<h2 class="loseScreen__heading">You Lose</h2>
 			<h3 class="loseScreen__score">Score: <span id="finalScore">0</span></h3>
 			<button class="loseScreen__button" id="startOverBtn">Start Over</button>
